--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,13 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    gap: 56px;
 }
 
+
+.headerWrapper {
+    background-color: #1F2937;
+}
 
 .header {
     background-color: #1F2937;
@@ -102,10 +107,83 @@ ul {
 
 .information {
     background-color: white;
-    height: 200px;
+    min-height: 400px;
     width: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
 }
 
-.headerWrapper {
-    background-color: #1F2937;
+.informationText {
+    margin-bottom: 32px;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 1000;
+    text-align: center;
+}
+
+.informationImages {
+    display: flex;
+    padding: 0 15%;
+    flex: 1 1 0;
+    justify-content: space-between;
+    align-items: center ;
+
+}
+
+.informationImageContainer {
+    display: flex;
+    flex-direction: column;
+    max-width: 175px;
+    flex-wrap: wrap;
+}
+
+.informationImageSubtext {
+    margin-top: 8px;
+    text-align: center;
+    color: rgb(121, 121, 121);
+    font-size: 18px;
+}
+
+.informationImageBox {
+    width: 175px;
+    height: 175px;
+    border:  4px solid #3882F6;
+    border-radius: 16px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.quote {
+    flex: 1;
+    background-color: #E5E7EB;
+    min-height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 8px;
+
+}
+
+.quoteText {
+    color: #1F2937;
+    font-size: 36px;
+    font-style: italic;
+    justify-content: center;
+    align-items: center;
+    padding: 0 20%;
+}
+
+.quoteAuthor {
+    color: #1F2937;
+    font-size: 24px;
+    text-align:  center;
+    font-weight: bold;
+    text-align: right;
+    justify-content: center;
+    align-items: center;
+    padding: 0 22%;
 }
