--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 56px;
 }
 
 
@@ -105,7 +104,16 @@ ul {
     display: flex;
 }
 
+.whiteContainer {
+    background-color: white;
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .information {
+    padding: 52px 0;
     background-color: white;
     min-height: 400px;
     width: auto;
@@ -186,4 +194,57 @@ ul {
     justify-content: center;
     align-items: center;
     padding: 0 22%;
+}
+
+.signUp {
+    min-height: 300px;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
+
+.blueBox {
+    flex: 0 1 1;
+    flex-shrink: 0;
+    width: 900px;
+    height: 130px;
+    border:  4px solid #3882F6;
+    border-radius: 16px;
+    background-color:#3882F6;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 100px;
+}
+
+.blueBoxMainText {
+    color: #E5E7EB;
+    font-weight: bold;
+    font-size: 24px;
+    display: flex;
+    flex-direction: column;
+}
+
+.blueBoxSubtext {
+    font-weight: 300;
+    font-size: 18px;
+}
+
+.signUpButtonBottom
+{
+    color: #E5E7EB;
+    border:  2px solid #F9FAF8;
+    border-radius: 8px;
+    padding: 4px 32px;
+    height: 20px;
+    text-align: center;
+    width: auto;
+}
+
+.footer {
+    width: auto;
+    height: 80px;
+    background-color: #1F2937;
+    color: #E5E7EB;
+    text-align: center;
 }
