--- a/styles.css
+++ b/styles.css
@@ -121,6 +121,8 @@ ul {
     flex-direction: column;
     justify-content: space-between;
 
+	flex-wrap: wrap;
+
 }
 
 .informationText {
@@ -173,6 +175,7 @@ ul {
     flex-direction: column;
     justify-content: center;
     gap: 8px;
+    flex-wrap: wrap;
 
 }
 
@@ -204,21 +207,21 @@ ul {
 }
 
 .blueBox {
-    flex: 0 1 1;
-    flex-shrink: 0;
-    width: 900px;
-    height: 130px;
+    flex: 1 1 0;
+    flex-grow: 20;
+    max-height: 120px;
     border:  4px solid #3882F6;
     border-radius: 16px;
     background-color:#3882F6;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly   ;
     align-items: center;
     padding: 0 100px;
+    gap: 16px;
 }
 
 .blueBoxMainText {
-    color: #E5E7EB;
+    color: #F9FAF8;
     font-weight: bold;
     font-size: 24px;
     display: flex;
@@ -232,19 +235,27 @@ ul {
 
 .signUpButtonBottom
 {
-    color: #E5E7EB;
+    color: #F9FAF8;
     border:  2px solid #F9FAF8;
     border-radius: 8px;
     padding: 4px 32px;
     height: 20px;
     text-align: center;
     width: auto;
+    font-weight: bold;
+    flex-shrink: 0;
 }
 
 .footer {
+    margin-top: auto;
     width: auto;
     height: 80px;
     background-color: #1F2937;
     color: #E5E7EB;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    font-weight: bold;
+    flex-wrap: wrap;
 }
