--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,7 @@ ul {
     flex: 1 1 0;
     justify-content: space-between;
     align-items: center ;
-
+    flex-wrap: wrap;
 }
 
 .informationImageContainer {
